log
Thu 28 Sep 2023 03:31:08 PM UTC: 
 tests:  0|4
total_score: 0/70
143a116
Thu 28 Sep 2023 04:01:05 PM UTC: 
 heap.c | 11 ++++++++++-
 1 file changed, 10 insertions(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘createHeap’:
heap.c:47:1: error: control reaches end of non-void function [-Werror=return-type]
   47 | }
      | ^
heap.c:41:68: error: ‘*newHeap.capac’ may be used uninitialized [-Werror=maybe-uninitialized]
   41 |   newHeap->heapArray = (heapElem*)malloc(sizeof(heapElem) * newHeap->capac);
      |                                                             ~~~~~~~^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
d243153
Thu 28 Sep 2023 04:01:23 PM UTC: 
 heap.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:4:
heap.c: In function ‘createHeap’:
heap.c:41:68: error: ‘*newHeap.capac’ may be used uninitialized [-Werror=maybe-uninitialized]
   41 |   newHeap->heapArray = (heapElem*)malloc(sizeof(heapElem) * newHeap->capac);
      |                                                             ~~~~~~~^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
6bfef12
Thu 28 Sep 2023 04:02:37 PM UTC: 
 heap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|4
total_score: 0/70
30528a2
Thu 28 Sep 2023 04:03:23 PM UTC: 
 heap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|4
total_score: 0/70
1fb810b
Thu 28 Sep 2023 04:20:39 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|4
total_score: 0/70
c69719b
Thu 28 Sep 2023 04:20:57 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
06c9828
Thu 28 Sep 2023 04:37:25 PM UTC: 
 heap.c | 10 ++++++++--
 1 file changed, 8 insertions(+), 2 deletions(-)
 tests:  1|3
total_score: 10/70
3dd28a5
Thu 28 Sep 2023 04:38:14 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘heap_top’:
heap.c:25:23: error: incompatible types when returning type ‘heapElem’ {aka ‘struct nodo’} but ‘void *’ was expected
   25 |   return pq->heapArray[0];
      |          ~~~~~~~~~~~~~^~~
heap.c:26:1: error: control reaches end of non-void function [-Werror=return-type]
   26 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
946911b
Thu 28 Sep 2023 04:38:30 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
0951a26
Thu 28 Sep 2023 04:38:44 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘heap_top’:
heap.c:25:23: error: ‘pq->heapArray’ is a pointer; did you mean to use ‘->’?
   25 |   return pq->heapArray.data;
      |                       ^
      |                       ->
heap.c:26:1: error: control reaches end of non-void function [-Werror=return-type]
   26 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
83bd178
Thu 28 Sep 2023 04:38:53 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|2
total_score: 20/70
cb64335
Mon 16 Oct 2023 01:02:37 AM UTC: 
 heap.c | 7 +++++++
 1 file changed, 7 insertions(+)
In file included from test.c:4:
heap.c: In function ‘heap_push’:
heap.c:36:9: error: ‘Heap’ {aka ‘struct Heap’} has no member named ‘cap’; did you mean ‘capac’?
   36 |     pq->cap=newCap;
      |         ^~~
      |         capac
heap.c:39:7: error: unused variable ‘currentIndex’ [-Werror=unused-variable]
   39 |   int currentIndex= pq->size;
      |       ^~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
6fe2af7
Mon 16 Oct 2023 01:02:49 AM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘heap_push’:
heap.c:39:7: error: unused variable ‘currentIndex’ [-Werror=unused-variable]
   39 |   int currentIndex= pq->size;
      |       ^~~~~~~~~~~~
heap.c:36:14: error: ‘newCap’ may be used uninitialized [-Werror=maybe-uninitialized]
   36 |     pq->capac=newCap;
      |     ~~~~~~~~~^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
4d8717e
Mon 16 Oct 2023 01:06:06 AM UTC: 
 heap.c | 11 +++++++++++
 1 file changed, 11 insertions(+)
In file included from test.c:4:
heap.c: In function ‘heap_push’:
heap.c:46:7: error: ‘parent’ undeclared (first use in this function)
   46 |       parent
      |       ^~~~~~
heap.c:46:7: note: each undeclared identifier is reported only once for each function it appears in
heap.c:46:13: error: expected ‘;’ before ‘}’ token
   46 |       parent
      |             ^
      |             ;
   47 |     }
      |     ~        
Compilation failed
ef05db7
Mon 16 Oct 2023 01:08:58 AM UTC: 
 heap.c | 10 +++++++++-
 1 file changed, 9 insertions(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘heap_push’:
heap.c:46:7: error: ‘parentIndex’ undeclared (first use in this function); did you mean ‘currentIndex’?
   46 |       parentIndex = (currentIndex-1)/2;
      |       ^~~~~~~~~~~
      |       currentIndex
heap.c:46:7: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
444b8df
Mon 16 Oct 2023 01:09:17 AM UTC: 
 heap.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:4:
heap.c: In function ‘heap_push’:
heap.c:46:7: error: ‘parentIndex’ undeclared (first use in this function); did you mean ‘currentIndex’?
   46 |       parentIndex = (currentIndex-1)/2;
      |       ^~~~~~~~~~~
      |       currentIndex
heap.c:46:7: note: each undeclared identifier is reported only once for each function it appears in
heap.c:50:23: error: ‘currentIdx’ undeclared (first use in this function); did you mean ‘currentIndex’?
   50 |         pq->heapArray[currentIdx] = pq->heapArray[parentIdx];
      |                       ^~~~~~~~~~
      |                       currentIndex
heap.c:50:51: error: ‘parentIdx’ undeclared (first use in this function)
   50 |         pq->heapArray[currentIdx] = pq->heapArray[parentIdx];
      |                                                   ^~~~~~~~~
Compilation failed
bd22f6f
